cropping overflows in blog posts; fixes #103

--- a/css/site.scss
+++ b/css/site.scss
@@ -626,6 +626,7 @@ body {
 
   @include media($large-display) {
     height: 550px;
+    overflow: hidden;
     @include span-columns(5.7);
 
   }
